--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -10,7 +10,6 @@
         android:name="com.crazyworld.countries.view.splash.SplashFragment"
         android:label="Splash Fragment"
         tools:layout="@layout/splash_fragment">
-
         <action
             android:id="@+id/action_splash_to_home"
             app:destination="@id/countriesFragment"
@@ -23,8 +22,11 @@
         android:name="com.crazyworld.countries.view.countries.CountriesFragment"
         android:label="Countries" >
         <action
-            android:id="@+id/action_countriesFragment_to_detailsFragment"
+            android:id="@+id/action_countries_to_details"
             app:destination="@id/detailsFragment" />
+        <argument
+            android:name="country"
+            app:argType="com.crazyworld.countries.view.countries.CountriesRender" />
     </fragment>
 
     <fragment
