--- a/app/src/main/res/layout/countries_fragment.xml
+++ b/app/src/main/res/layout/countries_fragment.xml
@@ -8,6 +8,7 @@
     tools:context=".MainActivity">
 
     <android.support.v7.widget.RecyclerView
+        app:layoutManager="android.support.v7.widget.LinearLayoutManager"
         android:id="@+id/countriesList"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
